--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
