--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,15 @@
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^1.19.4",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "sequelize-cli": "^5.5.1"
   }
 }
