--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "eslint": "^7.1.0",
