--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@mdi/font": "^4.7.95",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
+    "moment": "^2.27.0",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
