--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@mdi/font": "^4.7.95",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
