--- a/backend/.sequelizerc
+++ b/backend/.sequelizerc
@@ -1,8 +1,9 @@
-const path = require("path");
+const path = require('path');
 
+console.log(path.resolve(__dirname));
 module.exports = {
-  config: path.resolve(__dirname, "src", "config", "database.js"),
-  "models-path": path.resolve("src", "models"),
-  "seeders-path": path.resolve("src", "database", "seeders"),
-  "migrations-path": path.resolve("src", "database", "migrations")
+  config: path.resolve(__dirname, 'src', 'config', 'database.js'),
+  'models-path': path.resolve(__dirname, 'src', 'models'),
+  'seeders-path': path.resolve(__dirname, 'src', 'database', 'seeders'),
+  'migrations-path': path.resolve(__dirname, 'src', 'database', 'migrations'),
 };
