--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
+    "sequelize-replace-enum-postgres": "^1.5.0",
     "yup": "^0.29.1"
   },
   "devDependencies": {
